Compile project component

--- a/src/App.css
+++ b/src/App.css
@@ -26,10 +26,10 @@ body {
 .header li a {
   color: white;
 }
-.navbar{
+/* .navbar{
   margin-bottom: 0px;
 
-}
+} */
 .nav-wrapper li a {
   color: black;
   font-size: 19px;
