create about content

--- a/src/App.css
+++ b/src/App.css
@@ -212,7 +212,8 @@ body {
 }
 
 .aboutCont {
-  margin-left: 170px;
+  margin-left: 80px;
+  margin-right: 80px;
 }
 
 .teamM {
@@ -220,7 +221,7 @@ body {
   height: 200px;
 }
 
-.tTitle {
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+.contentFont {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
